<resources>
    <string name="app_name" translatable="false">Dr Pashu</string>
    <string name="website_url" translatable="false">https://drpashu.com/</string>
    <string name="play_store_link" translatable="false">https://lnkj.in/t/drpashu</string>
    <string name="agora_app_id" translatable="false">bcff0c8af21848c9845e5b62692cc1c0</string>
    <string name="google">Google</string>
    <string name="login_number">Login With Number</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="farm_name">Farm Name</string>
    <string name="capacity">Capacity</string>
    <string name="farm_location">Farm Location</string>
    <string name="save">Save</string>
    <string name="dashboard">Dashboard</string>
    <string name="tab1">Overdue</string>
    <string name="tab2">Upcoming</string>
    <string name="tab3">Completed</string>
    <string name="vaccinations">Vaccinations</string>
    <string name="symptoms">Symptoms</string>
    <string name="select_part">Click a Part</string>
    <string name="select_farm">Select a Farm</string>
    <string name="tail">Tail</string>
    <string name="body">Body</string>
    <string name="breast">Breast</string>
    <string name="head">Head</string>
    <string name="legs">Legs</string>
    <string name="confirm">Confirm</string>
    <string name="health">Health</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_videos">Add Videos</string>
    <string name="send_for_analysis">Send for Analysis</string>
    <string name="vaccination_3">Vaccination 3</string>
    <string name="intramuscular">Intramuscular</string>
    <string name="markhana">Markhana</string>
    <string name="logout">Logout</string>
    <string name="quantity">Quantity</string>
    <string name="date_of_birth">Date of Birth of Animal</string>
    <string name="vaccination_1">Vaccination 1</string>
    <string name="water">Water</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="vaccination_2">Vaccination 2</string>
    <string name="nasal_drop">Nasal drop</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="select_symptom">Please select a symptom</string>
    <string name="upto_6_images">You can add up to 6 images</string>
    <string name="soon">Coming soon</string>
    <string name="feed">Feed</string>
    <string name="change_language">Change Language</string>
    <string name="signup">Signup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="additional_info">Additional Info</string>
    <string name="qualification_id">Qualification Id</string>
    <string name="landline_number">Landline Number</string>
    <string name="identity_number">Identity Number</string>
    <string name="family_members">Family Members</string>
    <string name="age">Age</string>
    <string name="bank_number">Bank Account Number</string>
    <string name="ifsc_code">Ifsc Code</string>
    <string name="subsidy_information">Subsidy Information</string>
    <string name="job_card_holder">Job Card Holder</string>
    <string name="kissan_card_holder">Kissan Card Holder</string>
    <string name="aadhar_number">Aadhar Card Number</string>
    <string name="farmer_number">Farmer Card Number</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="loan">Loan</string>
    <string name="loan_farm">Have you taken loan for this farm</string>
    <string name="emi_per_month">EMI per Month</string>
    <string name="duration_remaining">Duration Remaining</string>
    <string name="farm_value_name">Farm Name</string>
    <string name="profile">Profile</string>
    <string name="months_remaining">Months Remaining</string>
    <string name="finance">Finance</string>
    <string name="country">Country</string>
    <string-array name="farming_type" translatable="false">
        <item>Agriculture</item>
        <item>Horticulture</item>
        <item>Fisheries</item>
        <item>Poultry</item>
        <item>Dairy</item>
        <item>Tea</item>
    </string-array>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="pincode">Pincode</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="farmer_card_number">Farmer Card Number</string>
    <string name="submit">Submit</string>
    <string name="results">\tResults</string>
    <string name="possible_disease">\tPossible Disease</string>
    <string name="manage_farm">Manage Farm</string>
    <string name="about_us">About us</string>
    <string name="select_cooperative">Select Your Cooperative</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="profile_updated">Profile Updated Successfully</string>
    <string name="add_animal_success">Animal Added Successfully</string>
    <string name="update_vaccination_success">Vaccination Updated Successfully</string>
    <string name="farmer_identity_number">Farmer\'s Identity Number</string>
    <string name="dashboard_desc">This app provides a platform for the farmers to manage the health of the livestock and poultry farms. Each user can have multiple farms. The dashboard will provide a high-level view of the farms.</string>
    <string name="click_here_to_get_started">Click here to get started</string>
    <string name="add_farm">Add Farm</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="profit_this_month">This Month</string>
    <string name="profit_for_the_farm">Total</string>
    <string name="vaccine">Vaccine</string>
    <string name="Farm_list">Farm List</string>
    <string name="add_more_symptom">Add more symptom</string>
    <string name="enter_symptoms">Enter symptoms</string>
    <string name="manage_farm_desc">This module allows the user to add, delete and view farms. A coordinator or VLE can add an existing farmer and manage those farms.\n\nClick on the Add Farm button to proceed.</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="farmer_s_age">Farmer\'s Age</string>
    <string name="pan_card_number">Pan Card Number</string>
    <string name="price_added">Price Added Successfully</string>
    <string name="farm_delete_success">Farm Deleted Successfully</string>
    <string name="farmer_deleted">Farmer Deleted Successfully</string>
    <string name="vle_delete_success">Vle Deleted Successfully</string>
    <string name="produce_desc">This module tracks the produce (eggs or milk). A default produce is estimated based on the breed and age of the livestock. If the produce is different from the estimate, click “Eggs produce” or “Milk produce”. To track the revenue from the sale of produce, click on “Sell Eggs” or “Sell milk”.</string>
    <string name="feed_desc">This module tracks the feed used by the animal. A default feed is estimated based on the animal breed and age. If the feed used is different from the estimate, click on Add Feed. If you wish to purchase more feed, click on Buy Feed.</string>
    <string name="vaccine_desc">Tracking of vaccinations is critical to the health of the farmer’s stock. This module tracks the status of the vaccinations and provides prompts for overdue vaccinations. These vaccinations are provided based on the animal and age.</string>
    <string name="finance_desc">This module is used to manage the income &amp; expenditure of each farm. It provides a monthly summary of three Overall Income, Expenditure and Profit/Loss. A list of the last 10 transactions is provided.</string>
    <string name="info_gov">Additional Info\nas per Govt rules</string>
    <string name="select_symptoms">Select Symptoms</string>
    <string name="all_head">All Head Symptoms</string>
    <string name="all_body">All Body Symptoms</string>
    <string name="all_legs">All Legs Symptoms</string>
    <string name="all_tail">All Tail Symptoms</string>
    <string name="buy_feed">Buy Feed</string>
    <string name="add_feed">Add Feed</string>
    <string name="vaccination">Vaccination</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="amount">Amount</string>
    <string name="loading">Loading</string>
    <string name="income">Income</string>
    <string name="expenditure">Expenditure</string>
    <string name="name">Name</string>
    <string name="date_of_birth_farm">Date of Birth</string>
    <string name="loan_taken">Loan Taken</string>
    <string name="emi_month">Emi Per Month</string>
    <string name="emi_remaining">Emi Remaining</string>
    <string name="congrats_no_vaccines_pending">Congrats, no vaccines pending</string>
    <string name="track_vaccine">Track vaccines on Overdue tab.</string>
    <string name="please_add_a_photo_to_proceed">Please add a photo to proceed</string>
    <string name="image_analysis">Image Analysis</string>
    <string name="warning">Warning</string>
    <string name="continue_analysis">Continue Analysis</string>
    <string name="take_another_photo">Take Another Photo</string>
    <string name="logout_message">Are you sure to logout?</string>
    <string name="select_lang">Select Language</string>
    <string name="symptoms_analysis">Symptoms</string>
    <string name="treatment">Treatments</string>
    <string name="breed">Breed</string>
    <string name="produce">Produce</string>
    <string name="profit_dashboard">Profit</string>
    <string name="health_dashboard">Health</string>
    <string name="add_val">Add</string>
    <string name="sell_val">Sell</string>
    <string name="verified">Verified</string>
    <string name="select_value">Select Produce Quantity</string>
    <string name="select_feed_value">Select Feed Quantity in kg</string>
    <string name="select_animal_farm">Select a Animal</string>
    <string name="enter_farm_name">Enter farm Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="select_dob_animal">Select Date of Birth of Animal</string>
    <string name="select_loan">Select loan option</string>
    <string name="enter_emi_amount">Enter EMI Amount</string>
    <string name="enter_duration_loan">Enter Duration of Loan</string>
    <string name="emi_start_date">Emi Start Date</string>
    <string name="total_emi_months">Total EMI Months</string>
    <string name="name_your_farm">Name your farm</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="consult_a_doctor_tollbar">\tConsult</string>
    <string name="call_history_toolbar">\tCall History</string>
    <string name="congratulations">Congratulations!</string>
    <string name="my_wallet_toolbar">\tMy Wallet</string>
    <string name="my_pashu_coins">My Pashu Coins</string>
    <string name="add_coins_to_wallet">Add Coins to Wallet</string>
    <string name="enter_number_of_coins">Enter number of coins</string>
    <string name="note_1_pashu_coin_1">(Note: 1 Pashu Coin = ₹1)</string>
    <string name="enter_coins_to_add">Enter Coins</string>
    <string name="recent_transactions_wallet">Recent Transactions</string>
    <string name="no_transactions_found">No Transactions found</string>
    <string name="rate_us">Rate Us</string>
    <string name="give_us_your_ratings">Give us your Ratings...</string>
    <string name="comments_for_the_call">Comments for the call</string>
</resources>