<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:visibility="visible"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MyWalletFragment">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="80dp"
        android:layout_height="92dp"
        android:layout_marginStart="@dimen/extra_large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/wallet_image"/>

    <TextView
        android:id="@+id/coinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/my_pashu_coins"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/normal_margin"
        android:textSize="@dimen/small_text"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintBottom_toTopOf="@id/coinValueText"/>

    <TextView
        android:id="@+id/coinValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text=""
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/dark_base"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/extra_large_text"
        android:textStyle="bold"
        android:layout_marginBottom="-3dp"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@id/coinText"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/addCoinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:fontFamily="@font/poppins"
        android:text="@string/add_coins_to_wallet"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text"
        android:layout_marginStart="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/coinInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/extra_small_margin"
        app:prefixTextColor="@color/black"
        android:hint="@string/enter_number_of_coins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/firstGuideline"
        app:layout_constraintTop_toBottomOf="@+id/addCoinText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coinInput"
            android:inputType="number"
            android:maxLength="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCoinsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@drawable/button_bg_signup"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/enter_coins_to_add"
        android:enabled="false"
        android:visibility="visible"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="@id/firstGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coinInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/coinInputLayout"/>

    <TextView
        android:id="@+id/noteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/note_1_pashu_coin_1"
        android:textColor="@color/black"
        android:textSize="@dimen/extra_small_text"
        android:layout_marginStart="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinInputLayout" />

    <TextView
        android:id="@+id/transactionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/recent_transactions_wallet"
        android:textColor="@color/black"
        android:visibility="visible"
        android:layout_marginStart="@dimen/normal_margin"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/walletTansactionRecyclerView"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/transactionText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/small_margin"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/noTransactionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/no_transactions_found"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>