<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible"
    tools:context=".fragment.CallFeedbackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/give_us_your_ratings"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/vetImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:src="@drawable/incoming_call_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText" />

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/normal_margin"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/rate_us"
            android:textColor="@color/base"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/vetImg" />

        <LinearLayout
            android:id="@+id/starLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ratingText">

            <ImageView
                android:id="@+id/firstStarImageView"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@drawable/feedback_star_empty" />

            <ImageView
                android:id="@+id/secondStarImageView"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginStart="@dimen/small_margin"
                android:src="@drawable/feedback_star_empty" />

            <ImageView
                android:id="@+id/thirdStarImageView"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginStart="@dimen/small_margin"
                android:src="@drawable/feedback_star_empty" />

            <ImageView
                android:id="@+id/fourthStarImageView"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginStart="@dimen/small_margin"
                android:src="@drawable/feedback_star_empty" />

            <ImageView
                android:id="@+id/fifthStarImageView"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginStart="@dimen/small_margin"
                android:src="@drawable/feedback_star_empty" />
        </LinearLayout>

        <TextView
            android:id="@+id/ratingMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:alpha="0.7"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/starLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ratingSelectionRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:nestedScrollingEnabled="false"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/ratingMessageText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/feedbackLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:visibility="gone"
            tools:visibility="visible"
            android:hint="@string/comments_for_the_call"
            app:layout_constraintTop_toBottomOf="@+id/ratingSelectionRecyclerview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedbackInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_semibold"
            android:minWidth="160dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feedbackLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>