<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/dialog_design"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/large_margin">

            <ImageView
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/free_call_icon"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_width="38dp"
                android:layout_height="38dp"/>

            <TextView
                android:id="@+id/congratsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#049B2E"
                android:textSize="@dimen/small_text"
                android:gravity="center"
                android:text="@string/congratulations"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="@dimen/extra_small_margin"
                android:layout_marginEnd="@dimen/extra_small_margin"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/messageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/extra_small_margin"
                android:layout_marginEnd="@dimen/extra_small_margin"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                app:layout_constraintTop_toBottomOf="@id/congratsText" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/normal_margin"
                android:background="#C4C4C447"
                app:layout_constraintTop_toBottomOf="@id/messageText" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/free_call_btn"
                android:fontFamily="@font/poppins_semibold"
                android:backgroundTint="#EEEEEE"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/cancel"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:textAllCaps="false"
                android:minWidth="125dp"
                android:gravity="center"
                android:paddingStart="@dimen/normal_margin"
                android:paddingEnd="@dimen/normal_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/extra_small_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintEnd_toStartOf="@id/proceedBtn"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/proceedBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:minWidth="125dp"
                android:gravity="center"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/free_call_btn"
                android:backgroundTint="@color/dark_base"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/proceed"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:textAllCaps="false"
                android:paddingStart="@dimen/normal_margin"
                android:paddingEnd="@dimen/normal_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/extra_small_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelBtn"
                app:layout_constraintTop_toBottomOf="@id/view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>